--- a/Prüfung.ipynb
+++ b/Prüfung.ipynb
@@ -14,7 +14,7 @@
     "**Authors:** <br>\n",
     "Björn Hahn () <br>\n",
     "Domenico Ferraro ()<br>\n",
-    "Justus Raabe () <br>\n",
+    "Justus Raabe (940919) <br>\n",
     "Lisa Sachau ()"
    ]
   },
@@ -559,7 +559,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "AIML",
+   "display_name": "AI",
    "language": "python",
    "name": "python3"
   },
@@ -573,7 +573,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.12.5"
   }
  },
  "nbformat": 4,
