--- a/Prüfung.ipynb
+++ b/Prüfung.ipynb
@@ -15,7 +15,7 @@
     "Björn Hahn () <br>\n",
     "Domenico Ferraro ()<br>\n",
     "Justus Raabe (940919) <br>\n",
-    "Lisa Sachau ()"
+    "Lisa Sachau (941367)"
    ]
   },
   {
@@ -27,12 +27,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "import numpy as np\n",
+    "import pandas as pd\n",
     "from PIL import Image\n",
     "import matplotlib.pyplot as plt\n",
     "from sklearn.preprocessing import OneHotEncoder\n",
@@ -51,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -121,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -148,7 +149,9 @@
       " 'leopard' 'leopard' 'leopard' 'leopard' 'leopard' 'leopard' 'serval'\n",
       " 'serval' 'serval' 'serval' 'serval' 'serval' 'serval' 'serval' 'serval'\n",
       " 'serval' 'serval' 'serval' 'serval' 'serval' 'serval' 'serval' 'serval'\n",
-      " 'serval' 'serval' 'serval']\n"
+      " 'serval' 'serval' 'serval']\n",
+      "(80,)\n",
+      "['bengal', 'jaguar', 'leopard', 'serval']\n"
      ]
     }
    ],
@@ -179,7 +182,9 @@
     "    fig.add_subplot(rows, columns, i+1)\n",
     "    plt.imshow(aug_images_e[i, ...])\n",
     "plt.show()\n",
-    "print(aug_labels_h)"
+    "print(aug_labels_h)\n",
+    "print(aug_labels_h.shape)\n",
+    "print(categories_h)"
    ]
   },
   {
@@ -370,6 +375,116 @@
     "y_h = encoder.fit_transform(np.array(aug_labels_h).reshape(-1,1))\n",
     "print(\"neues Array\")\n",
     "print(y_h)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 0, 0, 0],\n",
+       "       [1, 0, 0, 0],\n",
+       "       [1, 0, 0, 0],\n",
+       "       [1, 0, 0, 0],\n",
+       "       [1, 0, 0, 0],\n",
+       "       [1, 0, 0, 0],\n",
+       "       [1, 0, 0, 0],\n",
+       "       [1, 0, 0, 0],\n",
+       "       [1, 0, 0, 0],\n",
+       "       [1, 0, 0, 0],\n",
+       "       [1, 0, 0, 0],\n",
+       "       [1, 0, 0, 0],\n",
+       "       [1, 0, 0, 0],\n",
+       "       [1, 0, 0, 0],\n",
+       "       [1, 0, 0, 0],\n",
+       "       [1, 0, 0, 0],\n",
+       "       [1, 0, 0, 0],\n",
+       "       [1, 0, 0, 0],\n",
+       "       [1, 0, 0, 0],\n",
+       "       [1, 0, 0, 0],\n",
+       "       [0, 1, 0, 0],\n",
+       "       [0, 1, 0, 0],\n",
+       "       [0, 1, 0, 0],\n",
+       "       [0, 1, 0, 0],\n",
+       "       [0, 1, 0, 0],\n",
+       "       [0, 1, 0, 0],\n",
+       "       [0, 1, 0, 0],\n",
+       "       [0, 1, 0, 0],\n",
+       "       [0, 1, 0, 0],\n",
+       "       [0, 1, 0, 0],\n",
+       "       [0, 1, 0, 0],\n",
+       "       [0, 1, 0, 0],\n",
+       "       [0, 1, 0, 0],\n",
+       "       [0, 1, 0, 0],\n",
+       "       [0, 1, 0, 0],\n",
+       "       [0, 1, 0, 0],\n",
+       "       [0, 1, 0, 0],\n",
+       "       [0, 1, 0, 0],\n",
+       "       [0, 1, 0, 0],\n",
+       "       [0, 1, 0, 0],\n",
+       "       [0, 0, 1, 0],\n",
+       "       [0, 0, 1, 0],\n",
+       "       [0, 0, 1, 0],\n",
+       "       [0, 0, 1, 0],\n",
+       "       [0, 0, 1, 0],\n",
+       "       [0, 0, 1, 0],\n",
+       "       [0, 0, 1, 0],\n",
+       "       [0, 0, 1, 0],\n",
+       "       [0, 0, 1, 0],\n",
+       "       [0, 0, 1, 0],\n",
+       "       [0, 0, 1, 0],\n",
+       "       [0, 0, 1, 0],\n",
+       "       [0, 0, 1, 0],\n",
+       "       [0, 0, 1, 0],\n",
+       "       [0, 0, 1, 0],\n",
+       "       [0, 0, 1, 0],\n",
+       "       [0, 0, 1, 0],\n",
+       "       [0, 0, 1, 0],\n",
+       "       [0, 0, 1, 0],\n",
+       "       [0, 0, 1, 0],\n",
+       "       [0, 0, 0, 1],\n",
+       "       [0, 0, 0, 1],\n",
+       "       [0, 0, 0, 1],\n",
+       "       [0, 0, 0, 1],\n",
+       "       [0, 0, 0, 1],\n",
+       "       [0, 0, 0, 1],\n",
+       "       [0, 0, 0, 1],\n",
+       "       [0, 0, 0, 1],\n",
+       "       [0, 0, 0, 1],\n",
+       "       [0, 0, 0, 1],\n",
+       "       [0, 0, 0, 1],\n",
+       "       [0, 0, 0, 1],\n",
+       "       [0, 0, 0, 1],\n",
+       "       [0, 0, 0, 1],\n",
+       "       [0, 0, 0, 1],\n",
+       "       [0, 0, 0, 1],\n",
+       "       [0, 0, 0, 1],\n",
+       "       [0, 0, 0, 1],\n",
+       "       [0, 0, 0, 1],\n",
+       "       [0, 0, 0, 1]], dtype=int64)"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#eigener OneHotEncoder\n",
+    "def ownOneHotEncoder(labels, categories):\n",
+    "    encoded_vectors = []\n",
+    "    for label in labels:\n",
+    "        vector = [1 if label == categorie else 0 for categorie in categories]\n",
+    "        encoded_vectors.append(vector)\n",
+    "    df = pd.DataFrame(encoded_vectors, columns=categories)\n",
+    "    encoded_labels = df.to_numpy()\n",
+    "    return encoded_labels\n",
+    "\n",
+    "y_h = ownOneHotEncoder(aug_labels_h, categories_h)\n",
+    "y_h\n"
    ]
   },
   {
