neues easy Model

--- a/Prüfung.ipynb
+++ b/Prüfung.ipynb
@@ -871,19 +871,28 @@
     }
    ],
    "source": [
-    "epoch = 15\n",
-    "eval_accuracy = []\n",
-    "accuracy = []\n",
+    "epoch = 100\n",
+    "eval_accuracy_e = []\n",
+    "accuracy_e = []\n",
+    "z = list(range(k)) \n",
     "for i in range(k):\n",
-    "    fold_x_train = np.concatenate([image_folds_e[j] for j in range(k) if j != i], axis=0)\n",
-    "    fold_y_train = np.concatenate([y_folds_e[j] for j in range(k) if j != i], axis=0)\n",
+    "    test_fold_index = z[k-1] if k % 2 == 0 else z[k-2]\n",
+    "    if test_fold_index == i:\n",
+    "        continue\n",
+    "    fold_x_train = np.concatenate([image_folds_e[j] for j in range(k) if j != i and j != test_fold_index], axis=0)\n",
+    "    fold_y_train = np.concatenate([y_folds_e[j] for j in range(k) if j != i and j != test_fold_index], axis=0)\n",
     "    fold_x_val = image_folds_e[i]\n",
     "    fold_y_val = y_folds_e[i]\n",
-    "    model, model_accuracy = func.build_model(epoch, fold_x_train, fold_y_train, fold_x_val, fold_y_val, input_shape, y_e)\n",
-    "    eval_accuracy.append(model_accuracy)\n",
-    "    accuracy.append(max(model.history['accuracy']))\n",
-    "print(eval_accuracy)\n",
-    "print(accuracy)"
+    "    fold_x_test = image_folds_e[test_fold_index]\n",
+    "    fold_y_test = y_folds_e[test_fold_index]\n",
+    "    model, model_accuracy = func.build_model(epoch, fold_x_train, fold_y_train, fold_x_val, fold_y_val, fold_x_test, fold_y_test, input_shape)\n",
+    "    eval_accuracy_e.append(model_accuracy)\n",
+    "    accuracy_e.append(max(model.history['accuracy']))\n",
+    "    z = z[:-1] \n",
+    "    z = [test_fold_index] + z\n",
+    "    \n",
+    "print(eval_accuracy_e)\n",
+    "print(accuracy_e)"
    ]
   },
   {
