kleine Änderungen in onehotencoder

--- a/Prüfung.ipynb
+++ b/Prüfung.ipynb
@@ -226,349 +226,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[1. 0. 0. 0.]\n",
-      " [1. 0. 0. 0.]\n",
-      " [1. 0. 0. 0.]\n",
-      " [1. 0. 0. 0.]\n",
-      " [1. 0. 0. 0.]\n",
-      " [1. 0. 0. 0.]\n",
-      " [1. 0. 0. 0.]\n",
-      " [1. 0. 0. 0.]\n",
-      " [1. 0. 0. 0.]\n",
-      " [1. 0. 0. 0.]\n",
-      " [1. 0. 0. 0.]\n",
-      " [1. 0. 0. 0.]\n",
-      " [1. 0. 0. 0.]\n",
-      " [1. 0. 0. 0.]\n",
-      " [1. 0. 0. 0.]\n",
-      " [1. 0. 0. 0.]\n",
-      " [1. 0. 0. 0.]\n",
-      " [1. 0. 0. 0.]\n",
-      " [1. 0. 0. 0.]\n",
-      " [1. 0. 0. 0.]\n",
-      " [1. 0. 0. 0.]\n",
-      " [1. 0. 0. 0.]\n",
-      " [1. 0. 0. 0.]\n",
-      " [1. 0. 0. 0.]\n",
-      " [1. 0. 0. 0.]\n",
-      " [1. 0. 0. 0.]\n",
-      " [1. 0. 0. 0.]\n",
-      " [1. 0. 0. 0.]\n",
-      " [1. 0. 0. 0.]\n",
-      " [1. 0. 0. 0.]\n",
-      " [1. 0. 0. 0.]\n",
-      " [1. 0. 0. 0.]\n",
-      " [1. 0. 0. 0.]\n",
-      " [1. 0. 0. 0.]\n",
-      " [1. 0. 0. 0.]\n",
-      " [1. 0. 0. 0.]\n",
-      " [1. 0. 0. 0.]\n",
-      " [1. 0. 0. 0.]\n",
-      " [1. 0. 0. 0.]\n",
-      " [1. 0. 0. 0.]\n",
-      " [0. 1. 0. 0.]\n",
-      " [0. 1. 0. 0.]\n",
-      " [0. 1. 0. 0.]\n",
-      " [0. 1. 0. 0.]\n",
-      " [0. 1. 0. 0.]\n",
-      " [0. 1. 0. 0.]\n",
-      " [0. 1. 0. 0.]\n",
-      " [0. 1. 0. 0.]\n",
-      " [0. 1. 0. 0.]\n",
-      " [0. 1. 0. 0.]\n",
-      " [0. 1. 0. 0.]\n",
-      " [0. 1. 0. 0.]\n",
-      " [0. 1. 0. 0.]\n",
-      " [0. 1. 0. 0.]\n",
-      " [0. 1. 0. 0.]\n",
-      " [0. 1. 0. 0.]\n",
-      " [0. 1. 0. 0.]\n",
-      " [0. 1. 0. 0.]\n",
-      " [0. 1. 0. 0.]\n",
-      " [0. 1. 0. 0.]\n",
-      " [0. 1. 0. 0.]\n",
-      " [0. 1. 0. 0.]\n",
-      " [0. 1. 0. 0.]\n",
-      " [0. 1. 0. 0.]\n",
-      " [0. 1. 0. 0.]\n",
-      " [0. 1. 0. 0.]\n",
-      " [0. 1. 0. 0.]\n",
-      " [0. 1. 0. 0.]\n",
-      " [0. 1. 0. 0.]\n",
-      " [0. 1. 0. 0.]\n",
-      " [0. 1. 0. 0.]\n",
-      " [0. 1. 0. 0.]\n",
-      " [0. 1. 0. 0.]\n",
-      " [0. 1. 0. 0.]\n",
-      " [0. 1. 0. 0.]\n",
-      " [0. 1. 0. 0.]\n",
-      " [0. 1. 0. 0.]\n",
-      " [0. 1. 0. 0.]\n",
-      " [0. 1. 0. 0.]\n",
-      " [0. 1. 0. 0.]\n",
-      " [0. 0. 1. 0.]\n",
-      " [0. 0. 1. 0.]\n",
-      " [0. 0. 1. 0.]\n",
-      " [0. 0. 1. 0.]\n",
-      " [0. 0. 1. 0.]\n",
-      " [0. 0. 1. 0.]\n",
-      " [0. 0. 1. 0.]\n",
-      " [0. 0. 1. 0.]\n",
-      " [0. 0. 1. 0.]\n",
-      " [0. 0. 1. 0.]\n",
-      " [0. 0. 1. 0.]\n",
-      " [0. 0. 1. 0.]\n",
-      " [0. 0. 1. 0.]\n",
-      " [0. 0. 1. 0.]\n",
-      " [0. 0. 1. 0.]\n",
-      " [0. 0. 1. 0.]\n",
-      " [0. 0. 1. 0.]\n",
-      " [0. 0. 1. 0.]\n",
-      " [0. 0. 1. 0.]\n",
-      " [0. 0. 1. 0.]\n",
-      " [0. 0. 1. 0.]\n",
-      " [0. 0. 1. 0.]\n",
-      " [0. 0. 1. 0.]\n",
-      " [0. 0. 1. 0.]\n",
-      " [0. 0. 1. 0.]\n",
-      " [0. 0. 1. 0.]\n",
-      " [0. 0. 1. 0.]\n",
-      " [0. 0. 1. 0.]\n",
-      " [0. 0. 1. 0.]\n",
-      " [0. 0. 1. 0.]\n",
-      " [0. 0. 1. 0.]\n",
-      " [0. 0. 1. 0.]\n",
-      " [0. 0. 1. 0.]\n",
-      " [0. 0. 1. 0.]\n",
-      " [0. 0. 1. 0.]\n",
-      " [0. 0. 1. 0.]\n",
-      " [0. 0. 1. 0.]\n",
-      " [0. 0. 1. 0.]\n",
-      " [0. 0. 1. 0.]\n",
-      " [0. 0. 1. 0.]\n",
-      " [0. 0. 0. 1.]\n",
-      " [0. 0. 0. 1.]\n",
-      " [0. 0. 0. 1.]\n",
-      " [0. 0. 0. 1.]\n",
-      " [0. 0. 0. 1.]\n",
-      " [0. 0. 0. 1.]\n",
-      " [0. 0. 0. 1.]\n",
-      " [0. 0. 0. 1.]\n",
-      " [0. 0. 0. 1.]\n",
-      " [0. 0. 0. 1.]\n",
-      " [0. 0. 0. 1.]\n",
-      " [0. 0. 0. 1.]\n",
-      " [0. 0. 0. 1.]\n",
-      " [0. 0. 0. 1.]\n",
-      " [0. 0. 0. 1.]\n",
-      " [0. 0. 0. 1.]\n",
-      " [0. 0. 0. 1.]\n",
-      " [0. 0. 0. 1.]\n",
-      " [0. 0. 0. 1.]\n",
-      " [0. 0. 0. 1.]\n",
-      " [0. 0. 0. 1.]\n",
-      " [0. 0. 0. 1.]\n",
-      " [0. 0. 0. 1.]\n",
-      " [0. 0. 0. 1.]\n",
-      " [0. 0. 0. 1.]\n",
-      " [0. 0. 0. 1.]\n",
-      " [0. 0. 0. 1.]\n",
-      " [0. 0. 0. 1.]\n",
-      " [0. 0. 0. 1.]\n",
-      " [0. 0. 0. 1.]\n",
-      " [0. 0. 0. 1.]\n",
-      " [0. 0. 0. 1.]\n",
-      " [0. 0. 0. 1.]\n",
-      " [0. 0. 0. 1.]\n",
-      " [0. 0. 0. 1.]\n",
-      " [0. 0. 0. 1.]\n",
-      " [0. 0. 0. 1.]\n",
-      " [0. 0. 0. 1.]\n",
-      " [0. 0. 0. 1.]\n",
-      " [0. 0. 0. 1.]]\n",
-      "neues Array\n",
-      "[[1. 0. 0. 0.]\n",
-      " [1. 0. 0. 0.]\n",
-      " [1. 0. 0. 0.]\n",
-      " [1. 0. 0. 0.]\n",
-      " [1. 0. 0. 0.]\n",
-      " [1. 0. 0. 0.]\n",
-      " [1. 0. 0. 0.]\n",
-      " [1. 0. 0. 0.]\n",
-      " [1. 0. 0. 0.]\n",
-      " [1. 0. 0. 0.]\n",
-      " [1. 0. 0. 0.]\n",
-      " [1. 0. 0. 0.]\n",
-      " [1. 0. 0. 0.]\n",
-      " [1. 0. 0. 0.]\n",
-      " [1. 0. 0. 0.]\n",
-      " [1. 0. 0. 0.]\n",
-      " [1. 0. 0. 0.]\n",
-      " [1. 0. 0. 0.]\n",
-      " [1. 0. 0. 0.]\n",
-      " [1. 0. 0. 0.]\n",
-      " [1. 0. 0. 0.]\n",
-      " [1. 0. 0. 0.]\n",
-      " [1. 0. 0. 0.]\n",
-      " [1. 0. 0. 0.]\n",
-      " [1. 0. 0. 0.]\n",
-      " [1. 0. 0. 0.]\n",
-      " [1. 0. 0. 0.]\n",
-      " [1. 0. 0. 0.]\n",
-      " [1. 0. 0. 0.]\n",
-      " [1. 0. 0. 0.]\n",
-      " [1. 0. 0. 0.]\n",
-      " [1. 0. 0. 0.]\n",
-      " [1. 0. 0. 0.]\n",
-      " [1. 0. 0. 0.]\n",
-      " [1. 0. 0. 0.]\n",
-      " [1. 0. 0. 0.]\n",
-      " [1. 0. 0. 0.]\n",
-      " [1. 0. 0. 0.]\n",
-      " [1. 0. 0. 0.]\n",
-      " [1. 0. 0. 0.]\n",
-      " [0. 1. 0. 0.]\n",
-      " [0. 1. 0. 0.]\n",
-      " [0. 1. 0. 0.]\n",
-      " [0. 1. 0. 0.]\n",
-      " [0. 1. 0. 0.]\n",
-      " [0. 1. 0. 0.]\n",
-      " [0. 1. 0. 0.]\n",
-      " [0. 1. 0. 0.]\n",
-      " [0. 1. 0. 0.]\n",
-      " [0. 1. 0. 0.]\n",
-      " [0. 1. 0. 0.]\n",
-      " [0. 1. 0. 0.]\n",
-      " [0. 1. 0. 0.]\n",
-      " [0. 1. 0. 0.]\n",
-      " [0. 1. 0. 0.]\n",
-      " [0. 1. 0. 0.]\n",
-      " [0. 1. 0. 0.]\n",
-      " [0. 1. 0. 0.]\n",
-      " [0. 1. 0. 0.]\n",
-      " [0. 1. 0. 0.]\n",
-      " [0. 1. 0. 0.]\n",
-      " [0. 1. 0. 0.]\n",
-      " [0. 1. 0. 0.]\n",
-      " [0. 1. 0. 0.]\n",
-      " [0. 1. 0. 0.]\n",
-      " [0. 1. 0. 0.]\n",
-      " [0. 1. 0. 0.]\n",
-      " [0. 1. 0. 0.]\n",
-      " [0. 1. 0. 0.]\n",
-      " [0. 1. 0. 0.]\n",
-      " [0. 1. 0. 0.]\n",
-      " [0. 1. 0. 0.]\n",
-      " [0. 1. 0. 0.]\n",
-      " [0. 1. 0. 0.]\n",
-      " [0. 1. 0. 0.]\n",
-      " [0. 1. 0. 0.]\n",
-      " [0. 1. 0. 0.]\n",
-      " [0. 1. 0. 0.]\n",
-      " [0. 1. 0. 0.]\n",
-      " [0. 1. 0. 0.]\n",
-      " [0. 0. 1. 0.]\n",
-      " [0. 0. 1. 0.]\n",
-      " [0. 0. 1. 0.]\n",
-      " [0. 0. 1. 0.]\n",
-      " [0. 0. 1. 0.]\n",
-      " [0. 0. 1. 0.]\n",
-      " [0. 0. 1. 0.]\n",
-      " [0. 0. 1. 0.]\n",
-      " [0. 0. 1. 0.]\n",
-      " [0. 0. 1. 0.]\n",
-      " [0. 0. 1. 0.]\n",
-      " [0. 0. 1. 0.]\n",
-      " [0. 0. 1. 0.]\n",
-      " [0. 0. 1. 0.]\n",
-      " [0. 0. 1. 0.]\n",
-      " [0. 0. 1. 0.]\n",
-      " [0. 0. 1. 0.]\n",
-      " [0. 0. 1. 0.]\n",
-      " [0. 0. 1. 0.]\n",
-      " [0. 0. 1. 0.]\n",
-      " [0. 0. 1. 0.]\n",
-      " [0. 0. 1. 0.]\n",
-      " [0. 0. 1. 0.]\n",
-      " [0. 0. 1. 0.]\n",
-      " [0. 0. 1. 0.]\n",
-      " [0. 0. 1. 0.]\n",
-      " [0. 0. 1. 0.]\n",
-      " [0. 0. 1. 0.]\n",
-      " [0. 0. 1. 0.]\n",
-      " [0. 0. 1. 0.]\n",
-      " [0. 0. 1. 0.]\n",
-      " [0. 0. 1. 0.]\n",
-      " [0. 0. 1. 0.]\n",
-      " [0. 0. 1. 0.]\n",
-      " [0. 0. 1. 0.]\n",
-      " [0. 0. 1. 0.]\n",
-      " [0. 0. 1. 0.]\n",
-      " [0. 0. 1. 0.]\n",
-      " [0. 0. 1. 0.]\n",
-      " [0. 0. 1. 0.]\n",
-      " [0. 0. 0. 1.]\n",
-      " [0. 0. 0. 1.]\n",
-      " [0. 0. 0. 1.]\n",
-      " [0. 0. 0. 1.]\n",
-      " [0. 0. 0. 1.]\n",
-      " [0. 0. 0. 1.]\n",
-      " [0. 0. 0. 1.]\n",
-      " [0. 0. 0. 1.]\n",
-      " [0. 0. 0. 1.]\n",
-      " [0. 0. 0. 1.]\n",
-      " [0. 0. 0. 1.]\n",
-      " [0. 0. 0. 1.]\n",
-      " [0. 0. 0. 1.]\n",
-      " [0. 0. 0. 1.]\n",
-      " [0. 0. 0. 1.]\n",
-      " [0. 0. 0. 1.]\n",
-      " [0. 0. 0. 1.]\n",
-      " [0. 0. 0. 1.]\n",
-      " [0. 0. 0. 1.]\n",
-      " [0. 0. 0. 1.]\n",
-      " [0. 0. 0. 1.]\n",
-      " [0. 0. 0. 1.]\n",
-      " [0. 0. 0. 1.]\n",
-      " [0. 0. 0. 1.]\n",
-      " [0. 0. 0. 1.]\n",
-      " [0. 0. 0. 1.]\n",
-      " [0. 0. 0. 1.]\n",
-      " [0. 0. 0. 1.]\n",
-      " [0. 0. 0. 1.]\n",
-      " [0. 0. 0. 1.]\n",
-      " [0. 0. 0. 1.]\n",
-      " [0. 0. 0. 1.]\n",
-      " [0. 0. 0. 1.]\n",
-      " [0. 0. 0. 1.]\n",
-      " [0. 0. 0. 1.]\n",
-      " [0. 0. 0. 1.]\n",
-      " [0. 0. 0. 1.]\n",
-      " [0. 0. 0. 1.]\n",
-      " [0. 0. 0. 1.]\n",
-      " [0. 0. 0. 1.]]\n"
-     ]
-    }
-   ],
-   "source": [
-    "encoder = OneHotEncoder(categories=[categories_e], sparse_output=False)\n",
-    "y_e = encoder.fit_transform(np.array(aug_labels_e).reshape(-1,1))\n",
-    "print(y_e)\n",
-    "encoder = OneHotEncoder(categories=[categories_h], sparse_output=False)\n",
-    "y_h = encoder.fit_transform(np.array(aug_labels_h).reshape(-1,1))\n",
-    "print(\"neues Array\")\n",
-    "print(y_h)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
    "outputs": [
@@ -663,18 +320,8 @@
     }
    ],
    "source": [
-    "#eigener OneHotEncoder\n",
-    "def ownOneHotEncoder(labels, categories):\n",
-    "    encoded_vectors = []\n",
-    "    for label in labels:\n",
-    "        vector = [1 if label == categorie else 0 for categorie in categories]\n",
-    "        encoded_vectors.append(vector)\n",
-    "    df = pd.DataFrame(encoded_vectors, columns=categories)\n",
-    "    encoded_labels = df.to_numpy()\n",
-    "    return encoded_labels\n",
-    "\n",
-    "y_h = ownOneHotEncoder(aug_labels_h, categories_h)\n",
-    "y_h\n"
+    "y_h = func.ownOneHotEncoder(aug_labels_h, categories_h)\n",
+    "y_h"
    ]
   },
   {
