--- a/Prüfung.ipynb
+++ b/Prüfung.ipynb
@@ -13,7 +13,7 @@
    "source": [
     "**Authors:** <br>\n",
     "Björn Hahn () <br>\n",
-    "Domenico Ferraro ()<br>\n",
+    "Domenico Ferraro (941398)<br>\n",
     "Justus Raabe (940919) <br>\n",
     "Lisa Sachau (941367)"
    ]
@@ -40,7 +40,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Load Data"
+    "#### Load Data\n",
+    "A basic code block to load image data from relative paths and extracting neccesary parameters for further data preperation. <br>\n",
+    "Afterwards **func.read_images** transform every image data by using the given dictionary **input_shape** to fit predefined conditions. <br>\n",
+    "Lastly the created lists are rewritten into Numpy arrays via **images_to_array** for the following data processing.\n"
    ]
   },
   {
@@ -111,7 +114,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Data Augmentation"
+    "#### Data Augmentation\n",
+    "We are using data augmentation to increase our training data by rotating existing images from our **aimage_e and aimage_h** arrays. <br>\n",
+    "we are using the variables **aug_images and aug_labels** to create new lists that, in addition to our existing image data, will contain our newly rotated images and their labels. <br>\n",
+    "Followed by rewriting the newly acquired data into new arrays and plotting them for visual validation.\n"
    ]
   },
   {
@@ -215,7 +221,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Encode Labels"
+    "#### Encode Labels\n",
+    "Using our selfmade OneHotEncoder to convert categorical data into a binary format using a matrix."
    ]
   },
   {
@@ -232,7 +239,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Training and Test-Split with K-Fold (vielleicht K-Fold auch später, unsicher bei Reihenfolge tbh)"
+    "#### Training and Test-Split with K-Fold (vielleicht K-Fold auch später, unsicher bei Reihenfolge tbh)"
    ]
   },
   {
@@ -292,7 +299,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "easy difficulty"
+    "model training for our first \"easy\" data set where as our validation data equals the latest created k-fold, the test data equals the penultimate fold and our training data equals all folds not used for validation or testing. <br>\n",
+    "to create our train data we are concatenating every available fold, not used for validating or testing, via the inbuilt Numpy function. <br>\n",
+    "we are building the model in an iterative way using the k-fold method. <br>\n",
+    "Additionaly we are saving every value for the maximum of accuracy and val_accuracy for each iteration of the model into their respective lists for future visualisation."
    ]
   },
   {
@@ -466,7 +476,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "hard difficulty"
+    "#### Build model\n",
+    "the same things are applied in this model as above, the only thing that is changing are the used data to train, evaluate and test the model."
    ]
   },
   {
